
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- Fixed invalid login issue that prevented OnUserNotFound from firing on mgr login screen
- [#MODX-2238] Fixed bugs regarding parent constraint and default template
- [#MODX-2234] Fixed issue when drag/dropping a Resource into the parent field
- [#MODX-2226] Fixed bugs with date output filter not behaving as expected
- [#MODX-2184] Fixed issue where context was not respected in MODx.Browser instances, fixed bugs when specifying paths outside MODX_BASE_PATH
- [#MODX-2236] Added sanity check to modTemplateVar::getRenderDirectories with custom dirs
- Added modResource::joinGroup
- Added helper JS function MODx.hideTV to modext
- [#MODX-2233] Fixed issue where qtip was not showing on Elements in a Category
- [#MODX-2203] Fixed issue where root of file tree was not accessible after navigating away
- [#MODX-2192], [#MODX-2232] Fixed issues with settings and their translations, names in the Settings grids
- Adjustments and optimizations to menus/actions processors and js
- [#MODX-2231] Fixed issue where saving translated properties would overwrite key with translation
- [#MODX-2220] Fixed bug where save_user was needed to change profile
- [#MODX-2213] Always include english lexicon when loading a lexicon to act as a backup translation
- [#MODX-2210] Added strip for xss in manager a variable
- [#MODX-2205] Fixed issue with saving resources with resource fields having html and unescaped content
- [#MODX-2198] Fixed directory checks on context web path for advanced distribution
- [#MODX-2194] Fixed issue with modLexicon::fetch not working if a prefix is set
- Removed SVN commit log from top header now that we're in Git
- Adjusted version to 2.0.1-rc1
