@@ -13,9 +13,12 @@
 if (!$modx->user->isAuthenticated('mgr')) { return ''; }
 $modx->getVersionData();
 
+$ctx = !empty($_REQUEST['ctx']) ? $_REQUEST['ctx'] : 'mgr';
+$context = $modx->getObject('modContext',$ctx);
+$context->prepare();
 
 $customResourceClasses = array();
-$crcs = $modx->getOption('custom_resource_classes',null,'');
+$crcs = $context->getOption('custom_resource_classes',null,'');
 if (!empty($crcs)) {
     $crcs = explode(',',$crcs);
     foreach ($crcs as $crc) {
@@ -25,15 +28,15 @@ if (!empty($crcs)) {
     }
 }
 
-$template_url = $modx->getOption('manager_url').'templates/'.$modx->getOption('manager_theme').'/';
+$template_url = $context->getOption('manager_url').'templates/'.$context->getOption('manager_theme').'/';
 $c = array(
-    'base_url' => $modx->getOption('base_url'),
-    'connectors_url' => $modx->getOption('connectors_url'),
+    'base_url' => $context->getOption('base_url'),
+    'connectors_url' => $context->getOption('connectors_url'),
     'icons_url' => $template_url.'images/ext/modext/',
-    'manager_url' => $modx->getOption('manager_url'),
+    'manager_url' => $context->getOption('manager_url'),
     'template_url' => $template_url,
-    'http_host' => MODX_HTTP_HOST,
-    'site_url' => MODX_SITE_URL,
+    'http_host' => $context->getOption('http_host',null,MODX_HTTP_HOST),
+    'site_url' => $context->getOption('site_url',null,MODX_SITE_URL),
     'http_host_remote' => MODX_URL_SCHEME.$_SERVER['HTTP_HOST'],
     'user' => $modx->user->get('id'),
     'version' => $modx->version['full_version'],
