@@ -103,6 +103,7 @@ if ($modx->getOption('use_editor') && !empty($rte)) {
     }
 }
 $ctx = !empty($_REQUEST['context_key']) ? $_REQUEST['context_key'] : 'web';
+$modx->smarty->assign('_ctx',$ctx);
 
 /* register JS scripts */
 $modx->regClientStartupScript($modx->getOption('manager_url').'assets/modext/util/datetime.js');
