@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- [#MODX-2240] Site - Preview now dynamically previews current editing context
 - Fixed invalid login issue that prevented OnUserNotFound from firing on mgr login screen
 - [#MODX-2238] Fixed bugs regarding parent constraint and default template
 - [#MODX-2234] Fixed issue when drag/dropping a Resource into the parent field
